Done CSS Assignment

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link href= "style.css" type="text/css" rel="stylesheet">
+    </head>
      <body>
 <h1>
 About Me
 </h1>
  <p>
-     My name is Selam Teklehaimanot and I am happy person.
+     My name is Selam Teklehaimanot and I am <strong>happy</strong> person.
  </p>
  <h2>
 My Class This Semister
  </h2>
  <p>
-    -CS-221 Data Structures<br>
-    -STC-506 Leadership for Tech Managers<br>
-    -CS-301 Intro to Programming with JavaScript<br>
-    -CS-303	Object-Oriented Programming in JavaScript<br>
-    -CS-321	Introduction to Algorithms<br>
-    -CS-445 Modern Asynchronous Programming<br>
+     <ul class="a"></ul>
+    <li>CS-221 Data Structures</li>
+    <li>STC-506 Leadership for Tech Managers</li>
+    <li>CS-301 Intro to Programming with JavaScript</li>
+    <li>CS-303	Object-Oriented Programming in JavaScript</li>
+    <li>CS-321	Introduction to Algorithms</li>
+    <li>CS-445 Modern Asynchronous Programming</li>
  </p>
  <h2>
      My Favourite Movie
@@ -37,8 +41,9 @@ My Class This Semister
      Facts About My Neighbors
  </h2>
 <p>
-    - Bisrat Fantaye : Love to swim<br>
-    - Ruth Tsegaye : Love to preach
+    <ul class="a"></ul>
+   <li>Bisrat Fantaye : Love to swim</li>
+  <li>Ruth Tsegaye : Love to preach</li> 
 </p>
     </body>
 </html>
