--- a/cs303/labW1D2/books.html
+++ b/cs303/labW1D2/books.html
@@ -10,9 +10,23 @@
         Book Title
         <br />
         <input type="text" id="title" size="80" />
+        
     </p>
+    <p>
+        Author
+        <br/>
+        <input type="text" id="author" size="80" />
+    </p>
+    <p>
+        Library ID
+        <br/>
+        <input type="text" id="libraryID" size="80" />
+        </p>
 
+    <input type="button" value="Add book" id="addBookBtn" onclick="addBrowserBook();"/>
     <input type="button" value="Show titles" id="titlesBtn" onclick="showTitles();"/>
+    <input type="button" value= "Show authors" id="authorsBtn" onclick="showAuthors()"/>
+    <input type="button" value= "Show IDs" id="authorsBtn" onclick="showIDs()"/>
     <input type="button" value="Scramble" id="scrambleBtn" onclick="scramble();"/>
 
     <p>
