--- a/cs303/labW1D2/index.html
+++ b/cs303/labW1D2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
@@ -23,7 +23,7 @@
 </head>
 
 
-<body>
+<body> hihi 
     <script src="libraryBooksTest.js"></script>
     <script src="books.js"></script>
 
