--- a/cs303/labW1D2/index.html
+++ b/cs303/labW1D2/index.html
@@ -1,7 +1,8 @@
+ 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
@@ -23,9 +24,10 @@
 </head>
 
 
-<body> hihi 
+<body>
+    <a href="books.html">View book web app</a>
     <script src="libraryBooksTest.js"></script>
-    <script src="books.js"></script>
+    <script src="app.js"></script>
 
     <script src="calculatorTests.js"></script>
     <script src="calculator.js"></script>
@@ -44,3 +46,4 @@
 
 
 </html>
+ 
