--- a/cs303/labW1D2/index.html
+++ b/cs303/labW1D2/index.html
@@ -27,7 +27,7 @@
 <body>
     <a href="books.html">View book web app</a>
     <script src="libraryBooksTest.js"></script>
-    <script src="app.js"></script>
+    <script src="books.js"></script>
 
     <script src="calculatorTests.js"></script>
     <script src="calculator.js"></script>
