--- a/cs303/labW1D6/index.html
+++ b/cs303/labW1D6/index.html
@@ -24,6 +24,7 @@
 
 
 <body>
+    hello
     <li><a target="_blank" href="labW1D6/index.html">Destructuring</a></li> 
     <script src="destructureTests.js"></script>
     <script src="destructure.js"></script>
