--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>This is Selam's first web page</h1> 
 
-    <a href="family.png">My family</a>
+    <a href="family.jpg">My family</a>
 
     <p>
         My name is Selam T originally from Tigray & currently, I m living Minnesotta.
