--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>This is Selam's first web page</h1> 
 
     <a href="family.jpg">My family</a>
+    <img src="family.jpg" alt="family image">
 
     <p>
         My name is Selam T originally from Tigray & currently, I m living Minnesotta.
