--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <h1>This is Selam's first web page</h1> 
 
     <a href="family.jpg">My family</a>
-    <img src="family.jpg" alt="family image">
+    <img src="family.jpg" alt="family image" Width="200" height="300">
 
     <p>
-        My name is Selam T originally from Tigray & currently, I m living Minnesotta.
+        My name is Selam T originally from Ethiopia & currently, I m living Minnesotta.
 
         I am currently a Software Development Engineer student at Maharashi International Univerity.
 
